--- a/build.xml
+++ b/build.xml
@@ -17,7 +17,7 @@
          ================================= -->
     <target name="default" depends="depends" description="description">
         <javac destdir="tmp" srcdir="src">
-        	<classpath path="C:\eclipse\plugins\com.google.gwt.eclipse.sdkbundle_2.4.0.v201206290132-rel-r37\gwt-2.4.0\gwt-user.jar;C:\eclipse\plugins\com.google.gwt.eclipse.sdkbundle_2.4.0.v201206290132-rel-r37\gwt-2.4.0\gwt-dev.jar">
+        	<classpath path="C:\eclipse\gwt-2.4.0\gwt-user.jar;C:\eclipse\gwt-2.4.0\gwt-dev.jar">
         	        		
         	</classpath>
         </javac>
