--- a/.classpath
+++ b/.classpath
@@ -2,8 +2,9 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="con" path="com.google.gwt.eclipse.core.GWT_CONTAINER/GWT (2)"/>
-	<classpathentry kind="lib" path="lib/guava-16.0.jar" sourcepath="C:/java/lib/guava-16.0-sources.jar"/>
-	<classpathentry kind="lib" path="lib/guava-gwt-16.0.jar"/>
+	<classpathentry kind="lib" path="/GWTLib2011/lib/guava-gwt.jar"/>
+	<classpathentry kind="lib" path="/GWTLib2011/lib/guava-sources.jar"/>
+	<classpathentry kind="lib" path="/GWTLib2011/lib/guava.jar"/>
+	<classpathentry kind="con" path="com.google.gwt.eclipse.core.GWT_CONTAINER/gwt-2.6.1"/>
 	<classpathentry kind="output" path="war/WEB-INF/classes"/>
 </classpath>
